--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "debug": "^2.6.8",
     "express": "^4.15.3",
     "mongoose": "^4.10.8",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "node-restful": "^0.2.6"
   },
   "keywords": [
     "server",
