--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.15.3",
     "mongoose": "^4.10.8",
     "morgan": "^1.8.2",
+    "passport-local": "^1.0.0",
     "validator": "^9.1.1"
   },
   "keywords": [
