--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
+    "crypto": "^1.0.1",
     "debug": "^2.6.8",
     "express": "^4.15.3",
+    "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.10.8",
     "morgan": "^1.8.2",
     "passport": "^0.4.0",
