--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.10.8",
     "morgan": "^1.8.2",
+    "node-restful": "^0.2.6",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "passport-local": "^1.0.0",
