--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
     "aws-sdk": "^2.167.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
-    "busboy": "^0.2.14",
     "debug": "^2.6.8",
     "express": "^4.15.3",
     "mongoose": "^4.10.8",
     "morgan": "^1.8.2",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "node-restful": "^0.2.6",
     "validator": "^9.1.1"
   },
